--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 body{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 header{
     display: flex;
@@ -32,7 +34,7 @@ nav{
 }
 #compte-panier{
     display: flex;
-    justify-content: space-around
+    justify-content: space-around;
     border: 1px solid black;
     align-items: center;   
 }
@@ -47,8 +49,7 @@ nav{
     font-size: 20px;
 }
 #contact{
-    padding: 10px;
-        
+    padding: 15px;     
 }
 .contact2{
     padding: 10px;
