--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
 header{
     display: flex;
     justify-content: center;
-    border: 1px solid red;
 }
 #logo{
     padding: 20px;    
@@ -21,12 +20,10 @@ span{
 }
 #logo-nav{
     display: flex;
-    border: 1px solid blue;
     justify-content: space-between;
     width: 60%;
 }
 nav{
-    border: 2px solid pink;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -35,7 +32,6 @@ nav{
 #compte-panier{
     display: flex;
     justify-content: space-around;
-    border: 1px solid black;
     align-items: center;   
 }
 .compte-panier2{
@@ -54,4 +50,66 @@ nav{
 .contact2{
     padding: 10px;
     border-right: 2px solid grey;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+}
+#container{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    background-color: #f4f4f4; 
+}
+#sous-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.gant-boxe{
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+.produit>img{
+    width: 95%;
+    height: 90%;
+}
+.produit{
+    border: 2px solid black;
+    text-align: center;
+}
+.line{
+    text-decoration: line-through;
+    font-weight: bold;
+    font-size: 30px;
+}
+.prix{
+    font-size: 50px;
+    font-weight: bold;
+    color: orange;
+}
+button{
+    color: white;
+    background-color: black;
+    width: 40%;
+    height: 40px;
+    margin-top: 10px;
+}
+.sous-image{
+    display: flex;
+    justify-content: space-around;
+}
+#image-header{
+    display: flex;
+    justify-content: center;
+    /* width: 100%; */
+}
+#image-header>img{
+    width: 940.8px;
+    height: 298.7px;
 }
