--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ main{
 .produit{
     border: 2px solid black;
     text-align: center;
+    box-shadow: 2px 2px 2px 2px;
 }
 .line{
     text-decoration: line-through;
@@ -92,6 +93,7 @@ main{
     font-size: 50px;
     font-weight: bold;
     color: orange;
+    border-bottom: 1px solid black;
 }
 button{
     color: white;
@@ -107,9 +109,55 @@ button{
 #image-header{
     display: flex;
     justify-content: center;
-    /* width: 100%; */
+    width: 100%;
 }
 #image-header>img{
-    width: 940.8px;
+    width: 100%;
     height: 298.7px;
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #3b3937;
+}
+#head-footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 1px solid black;
+    border-radius: 10px;
+    width: 40%;
+    background-color: #f4f4f4;
+    padding: 10px;
+}
+#icones{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    padding: 10px;
+    border-bottom: 1px solid white;
+}
+.icones-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+.icones-footer>p{
+    color: white;
+    font-size: 13px;
+    text-align: justify
+}
+#social{
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+    padding: 10px;
+}
+footer>p{
+    padding: 10px;
+    color: white;
 }
